crates/jsonschema-macros/tests/ui/invalid_pattern_properties_type.stderr
error: [] is not of type "object"
 --> tests/ui/invalid_pattern_properties_type.rs:1:1
  |
1 | #[jsonschema::validator(schema = r#"{"type":"object","patternProperties":[]}"#)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `jsonschema::validator` (in Nightly builds, run with -Z macro-backtrace for more info)
