crates/jsonschema-macros/tests/ui/invalid_pattern_properties_type.rs
#[jsonschema::validator(schema = r#"{"type":"object","patternProperties":[]}"#)]
struct Validator;

fn main() {}
